--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/gardnern/bamazon/issues"
   },
-  "homepage": "https://github.com/gardnern/bamazon#readme"
+  "homepage": "https://github.com/gardnern/bamazon#readme",
+  "dependencies": {
+    "cli-table": "^0.3.1",
+    "inquirer": "^6.3.1",
+    "mysql": "^2.17.1"
+  }
 }
